# spatgen

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg
examples/: missing_data_reference.ann
spatgen/: __main__.py  parser.py
