[metadata]
name = spatgen
version = 0.1.3
author = Stephen Pegoraro
author_email = steve@dailyedit.com
description = Pattern generating DSL for spaCy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dailyedit/spatgen
project_urls =
    Source = https://github.com/dailyedit/spatgen
    Bug Tracker = https://github.com/dailyedit/spatgen/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Code Generators
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.6
install_requires =
    lark>=1.0.0
